--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+:root {
+    --accent-color: #262833;
+    --normal-color: #f8f8f8;
+    --footer-color: #ffa48e;
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -20,65 +26,348 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-nav {
-    height: 50px;
-    width: 100%;
+.grid-container {
+    max-width: 980px;
+    margin: auto;
 }
 
-.menu ul {
+a {
+    text-decoration: none;
+    color: white;
+}
+
+header {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    transition: 0.3s ease-in-out;
+}
+
+.black {
+    background-color: var(--normal-color);
+    box-shadow: 5px -1px 12px -5px grey;
+}
+
+.menu-options-new-color {
+    color: var(--accent-color);
+}
+
+.menu-options-new-color:hover {
+    border-bottom: 2px solid var(--accent-color);
+}
+
+.menu-options-default-color {
+    color: var(--normal-color);
+}
+
+.menu-options-default-color:hover {
+    border-bottom: 2px solid var(--normal-color);
+}
+
+header .menu ul {
     list-style: none;
     display: flex;
     justify-content: flex-end;
-    padding: 1rem;
+    padding: 2rem;
+    padding-right: 0;
 }
 
 .menu ul li {
     list-style: none;
     display: inline-block;
     font-size: 1.6rem;
-    margin-right: 2rem;
-}
-
-.menu ul li .link {
-    text-decoration: none;
-    color: white;
+    margin-left: 2rem;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: .2rem;
 }
 
 .main-container {
     width: 100%;
     height: 100vh;
-    background-image: url("https://developer.android.com/studio/images/studio-homepage-hero.jpg?hl=es");
+    background-image: url("../images/hero.jpg");
     background-size: cover;
     background-position: center;
-    position: relative;
-    bottom: 50px;
-    z-index: -1;
     filter: blur(1px);
     -webkit-filter: blur(1px);
 }
 
-.main-text {
+main .main-text {
     position: absolute;
     top: 50%;
     left: 50%;
     text-align: center;
     transform: translate(-50%, -50%);
-    color: white;
+    color: var(--normal-color);
 }
 
-.main-text h1 {
+main .main-text h1 {
     font-size: 5rem;
     font-weight: 600;
 }
 
-.main-text h3 {
+main .main-text h3 {
     font-size: 3rem;
     text-decoration: underline;
     font-weight: 400;
 }
 
+.about-me-main-container {
+    background-color: var(--normal-color);
+    padding: 10rem 0;
+}
+
 .about-me-container {
-    background-color: red;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.about-me-container h2 {
+    grid-row: 1;
+    grid-column: 1/ span 2;
+    font-size: 3.5rem;
+    text-align: center;
+    margin-bottom: 5rem;
+}
+
+.about-me-container p {
+    grid-row: 2/span 1;
+    grid-column: 1/ span 1;
+    font-size: 1.8rem;
+    margin: 5rem;
+    margin-left: 0;
+}
+
+.about-me-container a {
+    color: var(--accent-color);
+    font-weight: 600;
+    text-decoration: underline;
+}
+
+.about-me-container span {
+    color: var(--accent-color);
+    font-weight: 600;
+}
+
+.about-me-container figure {
+    align-self: center;
+}
+
+.about-me-container figure img {
+    grid-row: 2/span 3;
+    grid-column: 2/ span 1;
+    width: 100%;
+}
+
+.courses-main-container {
+    padding: 10rem 0;
+    background-color: var(--accent-color);
+}
+
+.courses-container h2 {
+    font-size: 3.5rem;
+    text-align: center;
+    color: var(--normal-color);
+}
+
+.courses-container .courses-titles {
+    margin-top: 5rem;
+    text-align: center;
+}
+
+.courses-titles p {
+    display: inline-block;
+    margin: 1rem;
+}
+
+.courses-titles p a {
+    display: block;
+    margin: auto;
+    padding: 1rem 1.25rem;
+    font-family: sans-serif;
+    font-size: 2rem;
+    text-decoration: none;
+    color: var(--normal-color);
     position: relative;
-    bottom: 50px;
+    transition: all .3s cubic-bezier(.2, 0, 0, 1);
+    z-index: 1;
+}
+
+.courses-titles p a::after {
+    content: '';
+    display: block;
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    right: 1.25rem;
+    left: 1.25rem;
+    background-color: var(--normal-color);
+    transition: all .3s cubic-bezier(.2, 0, 0, 1);
+    transform-origin: bottom center;
+    z-index: -1;
+}
+
+.courses-titles p a:hover {
+    color: var(--accent-color);
+}
+
+.courses-titles p a:hover::after {
+    right: 0;
+    left: 0;
+    height: 100%;
+}
+
+main .contact-main-container {
+    background-color: var(--normal-color);
+    padding: 10rem 0;
+}
+
+main .contact-main-container .contact-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+main .contact-main-container .contact-container h2 {
+    font-size: 3.5rem;
+    text-align: center;
+    margin-bottom: 5rem;
+}
+
+main .contact-main-container .contact-container p {
+    font-size: 1.6rem;
+}
+
+main .contact-main-container .contact-container button {
+    border-style: none;
+    background-color: #ffffff00;
+}
+
+main .contact-main-container .contact-container button {
+    padding: 2rem;
+    font-weight: 600;
+    margin-top: 2rem;
+    border: 4px solid var(--accent-color);
+    color: var(--accent-color);
+    background-color: #ffffff00;
+    transition: all .4s;
+    border-radius: 5px;
+    letter-spacing: 1rem;
+    cursor: pointer;
+}
+
+main .contact-main-container .contact-container button:hover {
+    background-color: var(--accent-color);
+    color: var(--normal-color);
+}
+
+main .contact-main-container .contact-container button a {
+    font-size: 2rem;
+    color: var(--accent-color);
+}
+
+main .contact-main-container .contact-container button a:hover {
+    color: var(--normal-color)
+}
+
+footer {
+    background-color: var(--footer-color);
+    height: 5rem;
+}
+
+footer .footer-container {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+footer .footer-container p {
+    justify-self: start;
+    align-self: center;
+    font-size: 1.4rem;
+    color: var(--accent-color);
+}
+
+footer .footer-container .icons {
+    width: 20rem;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    justify-self: end;
+}
+
+.footer-container .icons span {
+    color: var(--accent-color);
+    font-size: 3rem;
+    transition: all .4s;
+}
+
+.footer-container .icons span:hover {
+    color: var(--normal-color);
+    font-size: 3rem;
+}
+
+.footer-container a {
+    color: var(--accent-color);
+}
+
+.footer-container a:hover {
+    color: black;
+}
+
+@media screen and (max-width: 1024px) {
+    .grid-container {
+        padding: 0 4rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .about-me-container {
+        grid-template-columns: 1fr;
+    }
+    .about-me-container h2 {
+        grid-column: 1/ span 2;
+        margin-bottom: 0;
+    }
+    .about-me-container p {
+        grid-column: 1/ span 2;
+        margin-right: 0;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    html {
+        font-size: 8px;
+    }
+    .grid-container {
+        padding: 0 3rem;
+    }
+    header .menu ul {
+        justify-content: center;
+        padding: 2rem 0;
+    }
+    header .menu li {
+        margin: 0 1rem;
+    }
+    .about-me-container {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media screen and (max-width: 390px) {
+    html {
+        font-size: 7px;
+    }
+}
+
+@media screen and (max-width: 340px) {
+    html {
+        font-size: 6.5px;
+    }
 }
